# stuntrally3

./: .gitignore  Building.md  CMakeLists-Debian.txt  CMakeLists-WindowsDebug.txt  CMakeLists-WindowsRelease.txt  CMakeLists.txt  Contributing.md  Developing.md  Doxyfile  Readme.md  build-sr3-Linux.py  conanfile.py  conanfile.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-game.yml
CMake/: AddMissingTargets.cmake  Bootstrap.cmake  DependenciesConfig.cmake  DependenciesFunctions.cmake  FindMyGUI.cmake  FixupBundle.cmake  Macros.cmake
CMake/Dependencies/: OGRE.cmake
CMake/dependencies-helpers/: Boost.cmake
CMakeCI/: DependenciesConfig.cmake  Findenet.cmake  FixupBundle.cmake
CMakeCI/Templates/: Plugins.cfg.in  Resources.cfg.in
CMakeManual/Dependencies/: OGRE.cmake
Media/Compositors/: SR3.compositor  Tutorial_Terrain.compositor
Media/editor/: box.mesh  box_obj.mesh  car.mesh  cube.mesh
Media/fonts/: DebugFont.fontdef
Media/ghosts/: Des20-DesertCoaster.gho  Des20-DesertCoaster_r.gho  Isl21-BarrelFun.gho  Isl21-BarrelFun_r.gho  Mud6-Weiriwasso.gho  Mud6-Weiriwasso_r.gho  Spc3-HyperLoops.gho  Spr1-Rise.gho  Spr1-Rise_r.gho
Media/grass/: _grass.txt
Media/gui/: Common.layout  Editor.layout  Editor_Help.layout  Editor_Options.layout  Editor_ToDo.layout  Editor_Tools.layout  Editor_Track.layout  Editor_Utils.layout  Game.layout  Game_Help.layout  Game_Options.layout  Game_Utils.layout  MaterialEditor.layout  core_blackbluetemplates.xml  core_font.xml  core_language_cs_tag.xml  core_language_de_tag.xml  core_language_en_tag.xml  core_language_es_AR_tag.xml  core_language_fi_tag.xml  core_language_fr_tag.xml  core_language_hu_HU_tag.xml  core_language_it_tag.xml  core_language_nl_NL_tag.xml  core_language_pl_tag.xml  core_language_pt_BR_tag.xml  core_language_ro_tag.xml  core_language_ru_tag.xml  core_language_sk_tag.xml
Media/hud/: DebugFont.fontdef  Hud.material  _fonts.txt
Media/materials/: fluids.xml
Media/models/: HI_body.mesh  HI_interior.mesh  HI_wheel.mesh  SX_interior.mesh  _models.txt  cars.material  fern-lod6.mesh  fern2-lod6.mesh  fire.particle  jungle_tree-lod10.mesh  jungle_tree-lod8.mesh  palm2-lod10.mesh  palm2-lod8.mesh  plant_tropical-lod6.mesh  rock02brown2flat.mesh  rock18black3.mesh  rock25dark2Harsh2.mesh  rock30grayGreen.mesh  rock37brGr1tall.mesh  rock_B02.mesh
Media/objects/: balloon1.mesh  balloon2.mesh  big_tire_static.mesh  chapel.mesh  container_big.mesh  crate.mesh  crate2m.mesh  crate_1_static.mesh  crate_static.mesh  dish_hole.mesh  fuel_can.mesh  garbage_bag_01.mesh  garbage_bag_02_static.mesh  garbage_bin_blue.mesh  gas_tank.mesh  house_3.mesh  obstacle1.mesh  obstacle2.mesh  obstacle3.mesh  obstacle4.mesh  plastic_big_hvy.mesh  plastic_big_hvy_static.mesh  plastic_big_static.mesh  ring_blue_stick.mesh  sign_bumps.mesh  sign_slippery.mesh  statue_buddha.mesh  structure_1_v4.mesh  watchtower.mesh  watchtower2.mesh  water_plane_big.mesh  well.mesh  wood_block_static.mesh  wooden_barrel.mesh  wooden_barrel_big.mesh  wooden_barrel_static.mesh
Media/objects0/: han_academy.mesh  han_arsenal.mesh  han_barracks.mesh  han_civic_center.mesh  han_corral.mesh  han_defense_tower.mesh  han_dock.mesh  han_farmstead.mesh  han_forge.mesh  han_house_a.mesh  han_house_b.mesh  han_house_c.mesh  han_house_d.mesh  han_shrine.mesh  han_storehouse.mesh  han_wonder.mesh  kart_barracks.mesh  kart_blacksm2.mesh  kart_blacksmith.mesh  kart_civic.mesh  kart_civic2.mesh  kart_dock.mesh  kart_dock2.mesh  kart_embassy.mesh  kart_farmstead.mesh  kart_farmstead2.mesh  kart_fortress.mesh  kart_fortress2.mesh  kart_house_a.mesh  kart_house_b.mesh  kart_house_c.mesh  kart_market.mesh  kart_mausoleum.mesh  kart_storehouse.mesh  kart_temple.mesh  kart_temple2.mesh  kart_tophet.mesh  kart_tower.mesh  kart_tower2.mesh  kart_wall_gate-.mesh  (+71 more)
Media/objects2/: _readme2.txt  ancient_ruins_01.mesh  ancient_ruins_04.mesh  ancient_ruins_05.mesh  ancient_ruins_white_02.mesh  ancient_ruins_white_03.mesh  ancient_ruins_white_05.mesh  ancient_ruins_yellow_01.mesh  ancient_ruins_yellow_02.mesh  ancient_ruins_yellow_03.mesh  bridge_wooden_01.mesh  bridge_wooden_01_slope_A.mesh  bridge_wooden_01_slope_B.mesh  bridge_wooden_02_slope_A.mesh  bridge_wooden_02_slope_B.mesh  bridge_wooden_03.mesh  bridge_wooden_brown_01_slope_A.mesh  bridge_wooden_brown_02_slope_A.mesh  house_05.mesh  mining_truck.mesh  obstacle2.mesh  obstacle5.mesh  obstacle6.mesh  obstacle7.mesh  obstacle8.mesh  obstacleBlack4.mesh  obstacleBlack5.mesh  obstacleBlack8.mesh  obstacleCrystal1.mesh  obstacleCrystal3.mesh  obstacleCrystal5.mesh  obstacleCrystal6.mesh  obstacleCrystal7.mesh  obstacleGreen4.mesh  obstacleMarble2.mesh  obstacleMarble6.mesh  obstacleRed1.mesh  obstacleRed3.mesh  obstacleRed5.mesh  obstacleRed6.mesh  (+46 more)
Media/objects3/: gas_tank_02_grey.mesh
Media/objectsC/: alien_antenna.mesh  alien_base1.mesh  alien_base10.mesh  alien_base11.mesh  alien_base2.mesh  alien_base3.mesh  alien_base4.mesh  alien_base5.mesh  alien_base6.mesh  alien_base7.mesh  alien_base8.mesh  alien_base9.mesh  alien_base_big.mesh  (+57 more)
config/: brushes.ini  cars.xml  challenges.xml  championships.xml  collections.xml  colors.ini  editor-default.cfg  game-default.cfg  ogre-mesh.py  paint-default.cfg  paints.ini  presets.xml  resources2.cfg  resources3.cfg  tracks.ini
docs/: Building-old.md  Building.md  BuildingVS.md  Changelog.md  Contributing.md  Developing.md  Editor.md  EditorExportRoR.md  EditorOld.md  Faq.md  Features.md  General.md  Install-old.md  Install.md  Localization.md  Materials.md  MaterialsOld.md  Multiplayer.md  Objects.md  Paths.md  Release.md  Roadmap.md  Running.md  Statistics.md  Tasks.md  Troubleshooting.md  Tweak.md  TweakAdvanced.md  VehicleEditing.md  VehicleModeling.md  _Menu.md  _menu.md  data.md  help.md  server.md  status.md  tracks.md  trees.md  vehicles.md
locale/: 1upd-all.sh  2upd-xml.sh  sr.pot  xml_po_all.py
src/: TerrainGame_Create.cpp  TerrainGame_Update.cpp  TerrainScene_Objects.cpp  emojis  emojis.txt  favorites.txt
(+1776 files in other folders)
